# nlp4j-local-search

./: .gitignore  README.md  README_ja.md  SETUP_AND_RUN.md  VECTOR_SEARCH_IMPLEMENTATION.md  pyproject.toml
example/: example.py  example_vector_search.py
src/nlp4j_local_search/: __init__.py  engine.py  errors.py  jvm.py  result.py
src/nlp4j_local_search/jars/: LocalSearchExampleMain.java  LocalSearchTestCase.java
tests/: test_vector_search.py
